probar owl-carousel en el index

--- a/paquetes/experiencia-1.html
+++ b/paquetes/experiencia-1.html
@@ -40,7 +40,7 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
             <div class="container">
                 <div class="navbar-brand">
-                    <a  href="../index">
+                    <a  href="../">
                         <img src="../img/logo/LOGO BLANCO .png" class="img-fluid" alt="">
                     </a>
                 </div>
@@ -60,7 +60,7 @@
                             <a class="nav-link" href="../galeria">Galeria</a>
                         </li>
                         <div class="logo">
-                            <a href="../index">
+                            <a href="../">
                                 <img src="../img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="">
                             </a>
                         </div>
@@ -82,7 +82,7 @@
                 <div class="row align-items-center justify-content-center text-center" data-scrollax-parent="true">
                     <div class="col-md-8" data-scrollax=" properties: { translateY: '70%' }">
                         <h1 class="text-white text-uppercase" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Tours</h1>
-                        <div data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="index.html">Home</a> <span class="mx-2 text-white">&bullet;</span> <span class="text-white">Tour</span></div>
+                        <div data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="../">Home</a> <span class="mx-2 text-white">&bullet;</span> <span class="text-white">Tour</span></div>
                     </div>
                 </div>
             </div>
@@ -145,7 +145,7 @@
                                     </li>
                                     <li><strong>11:00 am </strong>
                                         <ul>
-                                            <li>Nos trasladaremos a 7 tinajas observaremos la belleza natural de la Catarata, donde se podrá tomar un refrescante baño.</li>
+                                            <li>Nos trasladaremos a 7 Tinajas observaremos la belleza natural de las caidas de agua, donde se podrá tomar un refrescante baño.</li>
                                         </ul>
                                     </li>
                                     <li><strong>12:30 pm </strong>
@@ -153,19 +153,6 @@
                                             <li>Concluyendo con el recorrido disfrutaremos un almuerzo en la Quinta “La Ponderosa”, Finalmente retornaremos a Quillabamba llegando aproximadamente a las. 15:00 hrs.</li>
                                         </ul>
                                     </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="content-info info-2 py-4">
-                            <div class="info-title">Incluye</div>
-                            <div>
-                                <ul>
-                                    <li>Transporte con movilidad privada.</li>  
-                                    <li>Guía turistico.</li>
-                                    <li>Almuerzo.</li>
-                                    <li>Excursion a los lugares turisticos mencionados.</li>
-                                    <li>Botiquín de primeros auxilios.</li>
-                                    <li>Sesión de fotos.</li>
                                 </ul>
                             </div>
                         </div>
@@ -193,15 +180,11 @@
                                     <li>Ropa Deportiva.</li>
                                     <li>Agua o Bebida Rehidratante.</li>
                                     <li>Ropa de Baño.</li>
-                                    <li>Snacke</li>
+                                    <li>Snack.</li>
                                     <li>Botines de trekking</li>
                                     <li>Aqua Shoes.</li>
                                     <li>Repelente.</li>
                                     <li>Mochila pequeña.</li>
-                                </ul>
-                                <div class="info-title">Facilitamos</div>
-                                <ul>
-                                    <li>Poncho Impermeable.</li>
                                 </ul>
                             </div>
                         </div>
@@ -221,7 +204,7 @@
                             <div>
                                 <ol>
                                     <li>El vehiculo tendra 10 minutos de tolerancia de partida respetando la puntualidad de los demas pasajeros.</li>								
-                                    <li>No arrojar la basura al suelo ni al agua durante los recorridos; por lo que se sugiere cargar su basura hasta encontrar un tacho dentro de la Ruta Móvil.</li>
+                                    <li>No arrojar basura al suelo ni al agua durante los recorridos; por lo que se sugiere cargar su basura hasta encontrar un tacho dentro de la Ruta Móvil.</li>
                                     <li>Sumarse a la campaña por el medio ambiente “#CuidaQuillabamba”; esta simple acción formada en nuevo hábito y con el ejemplo contribuirá en el mediano y largo plazo a detener la contaminación por esta causa, de nuestros ríos y lagunas, evitando también que especies animales se lastimen por su ingesta.</li>
                                     <li>Consuma productos locales, como bebidas y frutas de estación para aperitivos ligeros durante sus recorridos. Consuma en restaurantes de la variada oferta local. Compre artesanía como recuerdos de su visita en Quillabamba, esto asegura la microeconomía local.</li>
                                 </ol>
@@ -236,29 +219,29 @@
                             <h3><i class="fas fa-envelope"></i>Contacto:</h3>
                         </div>
                         <form id="contact-form" name="contact-form" action="../config/paquetes.php" method="POST">
-                            <p class="text-parraf">Ingresa tus datos para contactarte con la agencia de viajes y solicitar esta oferta de viaje</p>
+                            <p class="text-parraf">Ingresa tus datos para contactarte con la agencia de viajes y solicitar esta oferta de viaje.</p>
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="md-form">
-                                        <input type="text" id="name" pattern="[A-Za-z]{2-30}" name="name" class="form-control">
+                                        <input type="text" id="name" pattern="[A-Za-z]{2-30}" name="name" class="form-control" required>
                                         <label for="name" class="">Nombre y Apellidos</label>
                                     </div>
                                 </div>
                                 <div class="col-md-12">
                                     <div class="md-form">
-                                        <input type="text" id="email" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" name="email" class="form-control">
+                                        <input type="text" id="email" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" name="email" class="form-control" required>
                                         <label for="email" class="">E-mail</label>
                                     </div>
                                 </div>
                                 <div class="col-md-12">
                                     <div class="md-form">
-                                        <input type="text" id="subject" pattern="[0-9]{9}" name="subject" class="form-control">
+                                        <input type="text" id="subject" pattern="[0-9]{9}" name="subject" class="form-control" required>
                                         <label for="subject" class="">Telefono</label>
                                     </div>
                                 </div>
                                 <div class="col-md-12">
                                     <div class="md-form">
-                                        <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                                        <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea" required></textarea>
                                         <label for="message">Mensaje</label>
                                     </div>
                                 </div>
@@ -387,17 +370,17 @@
                 </div>
                 <div class="container">
                     <div class="row py-3">
-                        <div class="col">
-                            <p>
-                                La Ciudad del Eterno Verano Quillabamba está ubicado hacia el Norte de la Capital Histórica del Perú Cusco a unos 222 km de distancia con un promedio de 4 horas y 55 minutos de viaje. 
-                            </p>
-                            <p>
-                                Para iniciar el viaje tenemos que dirigirnos al Terminal Terrestre Utrasic para Quillabamba, para luego abordar el ómnibus que nos llevara a nuestro destino, este terminal se encuentra en la Av. Antonio Lorena dos cuadras más abajo del Cementerio General de Almudena, u otra opción es tomar los vehículos livianos que tienen las agencias frente a este cementerio.
-                            </p>
-                            <p>
-                                En nuestra travesía atravesaremos el maravilloso Valle Sagrado de los Incas, pasando por Ollantaytambo, ciudad muy transcurrida por turistas nacionales y extranjeros que se dirigen a nuestra Maravilla Arqueológica de Machu Picchu o alrededores,  Se recomienda llevar un abrigo para el frio porque se llegara a cruzar el Abra de Málaga, el cual es el punto más alto para llegar al Valle de La Convención, donde tendremos como destino a Quillabamba la ciudad del eterno verano y capital de la Provincia de La Convención.
-                            </p>
-                        </div>
+						<div class="col">
+							<p>
+								La ciudad del eterno verano Quillabamba está ubicado hacia el Norte de la Capital Histórica del Perú Cusco a unos 222 km de distancia con un promedio de 4 horas y 55 minutos de viaje. 
+							</p>
+							<p>
+								Para iniciar el viaje tenemos que dirigirnos al Terminal Terrestre Utrasic para Quillabamba, para luego abordar el ómnibus que nos llevara a nuestro destino, este terminal se encuentra en la Av. Antonio Lorena dos cuadras más abajo del Cementerio General de Almudena, u otra opción es tomar los vehículos livianos que tienen las agencias frente a este cementerio.
+							</p>
+							<p>
+								En tu travesía atravesaras el maravilloso Valle Sagrado de los Incas, pasando por Ollantaytambo, ciudad muy transcurrida por turistas extranjeros y nacionales que se dirigen a nuestra Maravilla Arqueológica de Machu Picchu o alrededores, Se recomienda llevar un abrigo para el frio porque se llegara a cruzar el Abra de Málaga, el cual es el punto más alto para llegar al Valle de La Convención, donde tendremos como destino a Quillabamba la ciudad del eterno verano y capital de la Provincia.
+							</p>
+					  	</div>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -413,7 +396,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title text-center w-100" id="myModalLabel">Recomadaciones para tu viaje</h4>
+                    <h4 class="modal-title text-center w-100" id="myModalLabel">Recomendaciones para tu viaje</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -424,40 +407,40 @@
                             <div class="list-title-recomend"><h3>Vestimenta</h3></div>
                             <div class="div">
                                 <ul class="unordered-list">
-                                    <li>
-                                        Independientemente de la época de visita es recomendable llevar ropa ligera y abrigadora: pantalones amplios, camisetas de algodón, zapatos de montaña, calzado deportivo. Además, no debe dejar de llevar un buen protector solar y un sombrero de ala ancha para el sol.
-                                    </li>
+									<li>
+										Independientemente de la época de visita es recomendable llevar ropa ligera y abrigadora: pantalones amplios, camisetas de algodón, zapatos de montaña, calzado deportivo. Además, no debe dejar de llevar un buen protector solar y un sombrero de ala ancha para el sol.
+									</li>
                                 </ul>
                             </div>
                             <div class="list-title-recomend"><h3>Seguridad</h3></div>
                             <div class="div">
-                                <ul class="unordered-list">
-                                    <li>
-                                        Siempre mantén tus objetos personales bajo tu supervisión y cuidado. Y si tomas un taxi en la calle, siempre verifica que sea un taxi autorizado o pertenezca a alguna empresa de taxis. 
-                                    </li>
-                                    <li>
-                                        Por otro lado, no llevar grandes cantidades de dinero en las excursiones por tener un riesgo de pérdida, sino será bajo su responsabilidad.
-                                    </li>
-                                </ul>
+								<ul class="unordered-list">
+									<li>
+										Siempre mantén tus objetos personales bajo tu supervisión y cuidado. Y si tomas un taxi en la calle, siempre verifica que sea un taxi autorizado o pertenezca a alguna empresa de taxis. 
+									</li>
+									<li>
+										Por otro lado, no llevar grandes cantidades de dinero en las excursiones por tener un riesgo de pérdida, si no será bajo su responsabilidad.
+									</li>
+								</ul>
                             </div>
                             <div class="list-title-recomend"><h3>Salud</h3></div>
                             <div class="div">
-                                <ul class="unordered-list">
-                                    <li>
-                                        Durante tu viaje, hidrátate adecuadamente, sobre todo en zonas de altura. Y recuerda siempre: beber agua embotellada o debidamente tratada, y consumir alimentos en restaurantes y no en puestos ambulantes. 
-                                    </li>
-                                </ul>
+								<ul class="unordered-list">
+									<li>
+										Durante tu viaje, hidrátate adecuadamente, sobre todo en zonas de altura. Y recuerda siempre: beber agua embotellada o debidamente tratada, y consumir alimentos en restaurantes y no en puestos ambulantes. 
+									</li>
+								</ul>
                             </div>
                             <div class="list-title-recomend"><h3>Otras Recomadaciones</h3></div>
                             <div class="div">
-                                <ul class="unordered-list">
-                                    <li>
-                                        La energía eléctrica en el Perú es de 220 voltios y 60 ciclos, en los hoteles de 3 estrellas a más podrán encontrar energía de 110 voltios. Ten cuidado, o infórmate bien, antes de conectar tus equipos a un interruptor.
-                                    </li>
-                                    <li>
-                                        Por último: En el Perú, al dejar una propina, no existe un monto obligatorio, estas dependen de la satisfacción respecto al servicio brindado o de la cortesía del viajero.
-                                    </li>
-                                </ul>
+								<ul class="unordered-list">
+									<li>
+										La energía eléctrica en el Perú es de 220 voltios y 60 ciclos, en los hoteles de 3 estrellas a más podrán encontrar energía de 110 voltios. Ten cuidado, o infórmate bien, antes de conectar tus equipos a un interruptor.
+									</li>
+									<li>
+										Por último: En el Perú, al dejar una propina, no existe un monto obligatorio, estas dependen de la satisfacción respecto al servicio brindado o de la cortesía del viajero.
+									</li>
+								</ul>
                             </div>
                         </div>
                     </div>
@@ -486,7 +469,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-md-3 col-social-list d-flex flex-column align-items-center justify-content-center">
-                    <h3>Encuentranos en</h3>
+                    <h3>Encuéntranos en</h3>
                     <ul class="footer_social list-unstyled">
                         <li class="social_animate"><a class="icon-1" href="https://twitter.com/DestinosQ" target="_blank"><span class="icon-twitter"></span></a></li>
                         <li class="so0cial_animate"><a class="icon-2" href="https://www.facebook.com/DestinosQuillabamba/" target="_blank"><span class="icon-facebook"></span></a></li>
