--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
 		<nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
 			<div class="container">
 				<div class="navbar-brand">
-					<a  href="index">
+					<a  href="/">
 						<img src="img/logo/LOGO BLANCO .png" class="img-fluid" alt="logo destinos Quillabamba">
 					</a>
 				</div>
@@ -47,7 +47,7 @@
 							<a class="nav-link" href="galeria">Galeria</a>
 						</li>
 						<div class="logo">
-							<a href="index">
+							<a href="/">
 								<img src="img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="">
 							</a>
 						</div>
@@ -69,7 +69,7 @@
 				<div class="row align-items-center justify-content-center text-center" data-scrollax-parent="true">
 					<div class="col-md-8" data-scrollax="properties: { translateY: '70%' }">
 						<h1 class="text-white" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Blog</h1>
-						<div data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="index.html">Inicio</a> <span class="mx-2 text-white">&bullet;</span> <span class="text-white">Destinos</span></div>
+						<div data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="/">Inicio</a> <span class="mx-2 text-white">&bullet;</span> <span class="text-white">Destinos</span></div>
 					</div>
 				</div>
 			</div>
@@ -79,14 +79,43 @@
 	<section class="content_blog" id="content_blog">
 		<div class="container">
 			<div class="row d-flex">
+				<!-- blog new -->
 				<div class="col-md-4 d-flex wow fadeInUp">
 					<div class="blog-entry align-self-stretch">
 						<div class="img-thumb">
-							<a href="blog-single/destinos-ocultos.html"><img src="img/blog/huayllayoc.jpg" class="img-fluid" alt="img-destinos-ocultos"></a>
+							<a href="blog-single/sirenayoc"><img src="img/blog/sirenayoc/inicio.jpg" class="img-fluid" alt="sirenayoc blog"></a>
 						</div>
 						<div class="text">
 							<span class="tags">blog</span>
-							<h3 class="heading mt-3"><a class="blog-single/destinos-ocultos.html" href="blog-single/destinos-ocultos.html">3 Destinos Ocultos Cerca de Quillabamba</a></h3>
+							<h3 class="heading mt-3"><a href="blog-single/sirenayoc">Cataratas de Sirenayoc: Guía de viaje a esta maravilla</a></h3>
+							<div class="meta mb-3">
+									<div><a href="blog-single/sirenayoc">Mayo 31, 2019</a></div>
+							</div>				
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 d-flex wow fadeInUp" data-wow-duration="1.5s" data-wow-dealy="2.5s">
+					<div class="blog-entry align-self-stretch">
+						<div class="img-thumb">
+							<a href="blog-single/torrechayoc"><img src="img/blog/torrechayoc/inicio-2.jpg" class="img-fluid" alt="blog torrechayoc"></a>
+						</div>
+						<div class="text">
+							<span class="tags">Festividad</span>
+							<h3 class="heading mt-3"><a href="blog-single/torrechayoc">Señor de Torrechayoc Quillabamba 2019</a></h3>
+							<div class="meta mb-3">
+									<div><a href="#">Mayo 28, 2019</a></div>
+							</div>				
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 d-flex wow fadeInUp" data-wow-duration="2s" data-wow-dealy="3s"> 
+					<div class="blog-entry align-self-stretch">
+						<div class="img-thumb">
+							<a href="blog-single/destinos-ocultos"><img src="img/blog/huayllayoc.jpg" class="img-fluid" alt="img-destinos-ocultos"></a>
+						</div>
+						<div class="text">
+							<span class="tags">blog</span>
+							<h3 class="heading mt-3"><a  href="blog-single/destinos-ocultos">3 Destinos Ocultos Cerca de Quillabamba</a></h3>
 							<div class="meta mb-3">
                   				<div><a href="#">Marzo 20, 2019</a></div>
                 			</div>				
@@ -96,11 +125,11 @@
 				<div class="col-md-4 d-flex wow fadeInUp" data-wow-duration="1.5s" data-wow-dealy="2.5s"> 
 					<div class="blog-entry align-self-stretch">
 						<div class="img-thumb">
-							<a href="blog-single/3-piscinas.html"><img src="img/blog/blog-piscina.jpg" class="img-fluid" alt="img-3-piscnias"></a>
+							<a href="blog-single/3-piscinas"><img src="img/blog/blog-piscina.jpg" class="img-fluid" alt="img-3-piscnias"></a>
 						</div>
 						<div class="text">
 							<span class="tags">blog</span>
-							<h3 class="heading mt-3"><a href="blog-single/3-piscinas.html">Las 3 Mejores Piscinas de la Convención</a></h3>
+							<h3 class="heading mt-3"><a href="blog-single/3-piscinas">Las 3 Mejores Piscinas de La Convención</a></h3>
 							<div class="meta mb-3">
                   				<div><a href="#">Marzo 25, 2019</a></div>
                 			</div>				
@@ -121,34 +150,6 @@
 						</div>
 					</div>
 				</div>
-				<!-- <div class="col-md-4 d-flex wow fadeInUp" data-wow-duration="2.5s" data-wow-dealy="3.5s">
-					<div class="blog-entry align-self-stretch">
-						<div class="img-thumb">
-							<a href=""><img src="img/destination.jpg" class="img-fluid" alt=""></a>
-						</div>
-						<div class="text">
-							<span class="tags">evento</span>
-							<h3 class="heading mt-3"><a href="">Las 3 Mejores Piscinas de la Convención</a></h3>
-							<div class="meta mb-3">
-                  				<div><a href="#">October 3, 2018</a></div>
-                			</div>				
-						</div>
-					</div>
-				</div> -->
-				<!-- <div class="col-md-4 d-flex wow fadeInUp" data-wow-duration="3s" data-wow-dealy="4s">
-					<div class="blog-entry align-self-stretch">
-						<div class="img-thumb">
-							<a href=""><img src="img/destination.jpg" class="img-fluid" alt=""></a>
-						</div>
-						<div class="text">
-							<span class="tags">evento</span>
-							<h3 class="heading mt-3"><a href="">Evento de noche del cafe convenciano 2019</a></h3>
-							<div class="meta mb-3">
-                  				<div><a href="#">October 3, 2018</a></div>
-                			</div>				
-						</div>
-					</div>
-				</div> -->
 				<!-- <div class="col-md-4 d-flex wow fadeInUp" data-wow-duration="3.5s" data-wow-dealy="4.5s">
 					<div class="blog-entry align-self-stretch">
 						<div class="img-thumb">
@@ -235,17 +236,17 @@
                 </div>
                 <div class="container">
                     <div class="row py-3">
-                        <div class="col">
-                            <p>
-                                La Ciudad del Eterno Verano Quillabamba está ubicado hacia el Norte de la Capital Histórica del Perú Cusco a unos 222 km de distancia con un promedio de 4 horas y 55 minutos de viaje. 
-                            </p>
-                            <p>
-                                Para iniciar el viaje tenemos que dirigirnos al Terminal Terrestre Utrasic para Quillabamba, para luego abordar el ómnibus que nos llevara a nuestro destino, este terminal se encuentra en la Av. Antonio Lorena dos cuadras más abajo del Cementerio General de Almudena, u otra opción es tomar los vehículos livianos que tienen las agencias frente a este cementerio.
-                            </p>
-                            <p>
-                                En nuestra travesía atravesaremos el maravilloso Valle Sagrado de los Incas, pasando por Ollantaytambo, ciudad muy transcurrida por turistas nacionales y extranjeros que se dirigen a nuestra Maravilla Arqueológica de Machu Picchu o alrededores,  Se recomienda llevar un abrigo para el frio porque se llegara a cruzar el Abra de Málaga, el cual es el punto más alto para llegar al Valle de La Convención, donde tendremos como destino a Quillabamba la ciudad del eterno verano y capital de la Provincia de La Convención.
-                            </p>
-                        </div>
+						<div class="col">
+							<p>
+								La ciudad del eterno verano Quillabamba está ubicado hacia el Norte de la Capital Histórica del Perú Cusco a unos 222 km de distancia con un promedio de 4 horas y 55 minutos de viaje. 
+							</p>
+							<p>
+								Para iniciar el viaje tenemos que dirigirnos al Terminal Terrestre Utrasic para Quillabamba, para luego abordar el ómnibus que nos llevara a nuestro destino, este terminal se encuentra en la Av. Antonio Lorena dos cuadras más abajo del Cementerio General de Almudena, u otra opción es tomar los vehículos livianos que tienen las agencias frente a este cementerio.
+							</p>
+							<p>
+								En tu travesía atravesaras el maravilloso Valle Sagrado de los Incas, pasando por Ollantaytambo, ciudad muy transcurrida por turistas extranjeros y nacionales que se dirigen a nuestra Maravilla Arqueológica de Machu Picchu o alrededores, Se recomienda llevar un abrigo para el frio porque se llegara a cruzar el Abra de Málaga, el cual es el punto más alto para llegar al Valle de La Convención, donde tendremos como destino a Quillabamba la ciudad del eterno verano y capital de la Provincia.
+							</p>
+					  	</div>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -261,7 +262,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title text-center w-100" id="myModalLabel">Recomadaciones para tu viaje</h4>
+                    <h4 class="modal-title text-center w-100" id="myModalLabel">Recomendaciones para tu viaje</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -272,40 +273,40 @@
                             <div class="list-title-recomend"><h3>Vestimenta</h3></div>
                             <div class="div">
                                 <ul class="unordered-list">
-                                    <li>
-                                        Independientemente de la época de visita es recomendable llevar ropa ligera y abrigadora: pantalones amplios, camisetas de algodón, zapatos de montaña, calzado deportivo. Además, no debe dejar de llevar un buen protector solar y un sombrero de ala ancha para el sol.
-                                    </li>
+									<li>
+										Independientemente de la época de visita es recomendable llevar ropa ligera y abrigadora: pantalones amplios, camisetas de algodón, zapatos de montaña, calzado deportivo. Además, no debe dejar de llevar un buen protector solar y un sombrero de ala ancha para el sol.
+									</li>
                                 </ul>
                             </div>
                             <div class="list-title-recomend"><h3>Seguridad</h3></div>
                             <div class="div">
-                                <ul class="unordered-list">
-                                    <li>
-                                        Siempre mantén tus objetos personales bajo tu supervisión y cuidado. Y si tomas un taxi en la calle, siempre verifica que sea un taxi autorizado o pertenezca a alguna empresa de taxis. 
-                                    </li>
-                                    <li>
-                                        Por otro lado, no llevar grandes cantidades de dinero en las excursiones por tener un riesgo de pérdida, sino será bajo su responsabilidad.
-                                    </li>
-                                </ul>
+								<ul class="unordered-list">
+									<li>
+										Siempre mantén tus objetos personales bajo tu supervisión y cuidado. Y si tomas un taxi en la calle, siempre verifica que sea un taxi autorizado o pertenezca a alguna empresa de taxis. 
+									</li>
+									<li>
+										Por otro lado, no llevar grandes cantidades de dinero en las excursiones por tener un riesgo de pérdida, si no será bajo su responsabilidad.
+									</li>
+								</ul>
                             </div>
                             <div class="list-title-recomend"><h3>Salud</h3></div>
                             <div class="div">
-                                <ul class="unordered-list">
-                                    <li>
-                                        Durante tu viaje, hidrátate adecuadamente, sobre todo en zonas de altura. Y recuerda siempre: beber agua embotellada o debidamente tratada, y consumir alimentos en restaurantes y no en puestos ambulantes. 
-                                    </li>
-                                </ul>
+								<ul class="unordered-list">
+									<li>
+										Durante tu viaje, hidrátate adecuadamente, sobre todo en zonas de altura. Y recuerda siempre: beber agua embotellada o debidamente tratada, y consumir alimentos en restaurantes y no en puestos ambulantes. 
+									</li>
+								</ul>
                             </div>
                             <div class="list-title-recomend"><h3>Otras Recomadaciones</h3></div>
                             <div class="div">
-                                <ul class="unordered-list">
-                                    <li>
-                                        La energía eléctrica en el Perú es de 220 voltios y 60 ciclos, en los hoteles de 3 estrellas a más podrán encontrar energía de 110 voltios. Ten cuidado, o infórmate bien, antes de conectar tus equipos a un interruptor.
-                                    </li>
-                                    <li>
-                                        Por último: En el Perú, al dejar una propina, no existe un monto obligatorio, estas dependen de la satisfacción respecto al servicio brindado o de la cortesía del viajero.
-                                    </li>
-                                </ul>
+								<ul class="unordered-list">
+									<li>
+										La energía eléctrica en el Perú es de 220 voltios y 60 ciclos, en los hoteles de 3 estrellas a más podrán encontrar energía de 110 voltios. Ten cuidado, o infórmate bien, antes de conectar tus equipos a un interruptor.
+									</li>
+									<li>
+										Por último: En el Perú, al dejar una propina, no existe un monto obligatorio, estas dependen de la satisfacción respecto al servicio brindado o de la cortesía del viajero.
+									</li>
+								</ul>
                             </div>
                         </div>
                     </div>
@@ -334,7 +335,7 @@
 					</div>
 				</div>
 				<div class="col-12 col-sm-12 col-md-3 col-social-list d-flex flex-column align-items-center justify-content-center">
-					<h3>Encuentranos en</h3>
+					<h3>Encuéntranos en</h3>
                     <ul class="footer_social list-unstyled">
                         <li class="social_animate"><a class="icon-1" href="https://twitter.com/DestinosQ" target="_blank"><span class="icon-twitter"></span></a></li>
                         <li class="so0cial_animate"><a class="icon-2" href="https://www.facebook.com/DestinosQuillabamba/" target="_blank"><span class="icon-facebook"></span></a></li>
