--- a/destinos-2.html
+++ b/destinos-2.html
@@ -26,7 +26,7 @@
 		<nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
 			<div class="container">
 				<div class="navbar-brand visible-xs">
-					<a href="index">
+					<a href="/">
 						<img src="img/logo/LOGO BLANCO .png" class="img-fluid" alt="logo destinos Quillabamba">
 					</a>
 				</div>
@@ -46,7 +46,7 @@
                             <a class="nav-link" href="galeria">Galeria</a>
                         </li>
 						<div class="logo">
-                        	<a href="index">
+                        	<a href="/">
                                 <img src="img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="logo destinos quillabmab">
 							</a>
 						</div>
@@ -68,7 +68,7 @@
 				<div class="row align-items-center justify-content-center text-center" data-scrollax-parent="true">
 					<div class="col-md-8"  data-scrollax=" properties: { translateY: '70%' }">
 						<h1 class="text-white"  data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">DESTINOS</h1>
-						<div data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="index.html">Inicio</a> <span class="mx-2 text-white">&bullet;</span> <span class="text-white">Destinos</span></div>
+						<div data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="/">Inicio</a> <span class="mx-2 text-white">&bullet;</span> <span class="text-white">Destinos</span></div>
 					</div>
 				</div>
 			</div>
@@ -82,8 +82,8 @@
 					<div class="d-block services text-center">
 						<div class="d-flex content_icon justify-content-center"><div class="icon"><span class="flaticon-heart"></span></div></div>
 						<div class="media-body p-2 mt-2">
-							<h3 class="heading mb-3">Mejores experiencias</h3>
-							<p>Disfrutar de la mejor experiencia con la familia, amigos o para ti aventurero.</p>
+							<h3 class="heading mb-3">Mejores Experiencias</h3>
+							<p>Te invitamos a disfrutar de la mejor experiencia con la familia, amigos o para ti aventurero.</p>
 						</div>
 					</div>
 				</div>
@@ -91,7 +91,7 @@
 					<div class="d-block services text-center">
 						<div class="d-flex content_icon justify-content-center"><div class="icon"><span class="flaticon-user"></span></div></div>
 						<div class="media-body p-2 mt-2">
-							<h3 class="heading mb-3">Guia de viajes</h3>
+							<h3 class="heading mb-3">Guía de Viajes</h3>
 							<p>Guias locales conocedores del tema y del lugar, que te llevaran a vivir un experiencia maravillosa.</p>
 						</div>
 					</div>
@@ -100,8 +100,8 @@
 					<div class="d-block services text-center">
 						<div class="d-flex content_icon justify-content-center"><div class="icon"><span class="flaticon-support"></span></div></div>
 						<div class="media-body p-2 mt-2">
-							<h3 class="heading mb-3">Soporte dedicado</h3>
-							<p>Con una atención de 24/7 soporte personalizado a los aventureros y disponibles para cualquier consulta</p>
+							<h3 class="heading mb-3">Soporte Dedicado</h3>
+							<p>Con una atención de 24/7, soporte personalizado a los aventureros y disponibles para cualquier consulta.</p>
 						</div>
 					</div>
 				</div>
@@ -114,7 +114,7 @@
 			<div class="row justify-content-center pb-5 wow fadeInUp">
 				<div class="col-md-12 heading-section text-center">
 					<h2 class="mb-4">Los Mejores Destinos</h2>
-					<p>Te mostramos los mejores destinos que puedes elegir y vivir una experiencia unica.</p>
+					<p>Te mostramos los mejores destinos que puedes elegir y vivir una experiencia única.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -187,7 +187,7 @@
 							<a href="destinos/D-MadreSelva">
 								<h3 class="text-center py-2">Madre Selva</h3>
 							</a>
-							<p class="text-center">Un paraíso lleno de afloraciones, con bellas vistas de montañas y riachuelos.</p>
+							<p class="text-center">Un paraíso lleno de afloraciones, con vistas hermosas de las montañas y riachuelos.</p>
 						</div>
 						<a href="img/mini-destinos/Madre-Selva/Miniatura/miniaturas-de-destinos-madre-selva.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
@@ -242,7 +242,7 @@
 							<a href="destinos/D-Quillabamba">
 								<h3 class="text-center py-2">Quillabamba</h3>
 							</a>
-							<p class="text-center">Conocida como "La ciudad del Eterno verano" posee un agradable clima cálido durante todo el año.</p>
+							<p class="text-center">Conocida como "La ciudad del eterno verano" posee un agradable clima cálido durante todo el año.</p>
 						</div>
 						<a href="img/mini-destinos/Quillabamba/miniatura/miniaturas-de-destinos-Quillabamba.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
@@ -257,11 +257,11 @@
 							</a>
 						</div>
 						<div class="text">
-							<h4 class="price">Aventura</h4>
+							<h4 class="price">Camping</h4>
 							<a href="destinos/D-SalkantydeChichima">
 								<h3 class="text-center py-2">Salkantay de Chichima</h3>
 							</a>
-							<p class="text-center">Maravillate con el atardecer más hermoso de nuestro nevadao del Apu Salkantay.</p>
+							<p class="text-center">Maravíllate con el atardecer más hermoso de nuestro nevado del Apu Salkantay.</p>
 						</div>
 						<a href="img/mini-destinos/Salkanta-desde-Chichima/miniatura/miniaturas-de-destinos-chichima.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
@@ -280,7 +280,7 @@
 							<a href="destinos/D-SanPedro">
 								<h3 class="text-center py-2">San Pedro</h3>
 							</a>
-							<p class="text-center">Bellos lugares y paisajes, un excelente clima para rodearse con la naturaleza.</p>
+							<p class="text-center">Bello lugar de magnificos paisajes, con un excelente clima para rodearse con la naturaleza.</p>
 						</div>
 						<a href="img/mini-destinos/San-pedro/miniatura/miniaturas-de-destinos-san-pedro.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
@@ -298,7 +298,7 @@
 							<a href="destinos/D-Torontoypata.html">
 								<h3 class="text-center py-2">Torontoypata</h3>
 							</a>
-							<p class="text-center">Un espectacular cañón en sus paredes se encuntran nidos de aves como Gallito de las rocas.</p>
+							<p class="text-center">Un espectacular cañón que en sus paredes se encuentran nidos de aves como el Gallito de las rocas</p>
 						</div>
 						<a href="img/mini-destinos/Torontoypata/miniatura/miniaturas-de-destinos-torontoypata.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
@@ -336,7 +336,7 @@
 							<a href="destinos/D-Urusayhua">
 								<h3 class="text-center py-2">Urusayhua</h3>
 							</a>
-							<p class="text-center">Una imponente montaña llena de misticismo y fuerza, llena de flora y fauna.</p>
+							<p class="text-center">Una imponente montaña llena de misterios, repleto de una gran biodiversidad.</p>
 						</div>
 						<a href="img/mini-destinos/Urusayhua/miniatura/miniaturas-de-destinos-urusayhua.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
@@ -353,9 +353,9 @@
 						<div class="text">
 							<h4 class="price">Ecoturismo</h4>
 							<a href="destinos/D-VueltaMundo">
-								<h3 class="text-center py-2">Vuelta la mundo</h3>
+								<h3 class="text-center py-2">Vuelta al Mundo</h3>
 							</a>
-							<p class="text-center">Un bello paraje para disfrutar unos fimenes de semenas en compañia de amistades o familia.</p>
+							<p class="text-center">Un bello paraje para disfrutar los fines de semana en compañía de amistades o familia.</p>
 						</div>
 						<a href="img/mini-destinos/Vuleta-al-Mundo/miniatura/miniaturas-de-destinos-vuelta-al-mundo.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
@@ -465,17 +465,17 @@
                 </div>
                 <div class="container">
                     <div class="row py-3">
-                        <div class="col">
-                            <p>
-                                La Ciudad del Eterno Verano Quillabamba está ubicado hacia el Norte de la Capital Histórica del Perú Cusco a unos 222 km de distancia con un promedio de 4 horas y 55 minutos de viaje. 
-                            </p>
-                            <p>
-                                Para iniciar el viaje tenemos que dirigirnos al Terminal Terrestre Utrasic para Quillabamba, para luego abordar el ómnibus que nos llevara a nuestro destino, este terminal se encuentra en la Av. Antonio Lorena dos cuadras más abajo del Cementerio General de Almudena, u otra opción es tomar los vehículos livianos que tienen las agencias frente a este cementerio.
-                            </p>
-                            <p>
-                                En nuestra travesía atravesaremos el maravilloso Valle Sagrado de los Incas, pasando por Ollantaytambo, ciudad muy transcurrida por turistas nacionales y extranjeros que se dirigen a nuestra Maravilla Arqueológica de Machu Picchu o alrededores,  Se recomienda llevar un abrigo para el frio porque se llegara a cruzar el Abra de Málaga, el cual es el punto más alto para llegar al Valle de La Convención, donde tendremos como destino a Quillabamba la ciudad del eterno verano y capital de la Provincia de La Convención.
-                            </p>
-                        </div>
+						<div class="col">
+							<p>
+								La ciudad del eterno verano Quillabamba está ubicado hacia el Norte de la Capital Histórica del Perú Cusco a unos 222 km de distancia con un promedio de 4 horas y 55 minutos de viaje. 
+							</p>
+							<p>
+								Para iniciar el viaje tenemos que dirigirnos al Terminal Terrestre Utrasic para Quillabamba, para luego abordar el ómnibus que nos llevara a nuestro destino, este terminal se encuentra en la Av. Antonio Lorena dos cuadras más abajo del Cementerio General de Almudena, u otra opción es tomar los vehículos livianos que tienen las agencias frente a este cementerio.
+							</p>
+							<p>
+								En tu travesía atravesaras el maravilloso Valle Sagrado de los Incas, pasando por Ollantaytambo, ciudad muy transcurrida por turistas extranjeros y nacionales que se dirigen a nuestra Maravilla Arqueológica de Machu Picchu o alrededores, Se recomienda llevar un abrigo para el frio porque se llegara a cruzar el Abra de Málaga, el cual es el punto más alto para llegar al Valle de La Convención, donde tendremos como destino a Quillabamba la ciudad del eterno verano y capital de la Provincia.
+							</p>
+					  	</div>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -491,7 +491,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title text-center w-100" id="myModalLabel">Recomadaciones para tu viaje</h4>
+                    <h4 class="modal-title text-center w-100" id="myModalLabel">Recomendaciones para tu viaje</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -502,40 +502,40 @@
                             <div class="list-title-recomend"><h3>Vestimenta</h3></div>
                             <div class="div">
                                 <ul class="unordered-list">
-                                    <li>
-                                        Independientemente de la época de visita es recomendable llevar ropa ligera y abrigadora: pantalones amplios, camisetas de algodón, zapatos de montaña, calzado deportivo. Además, no debe dejar de llevar un buen protector solar y un sombrero de ala ancha para el sol.
-                                    </li>
+									<li>
+										Independientemente de la época de visita es recomendable llevar ropa ligera y abrigadora: pantalones amplios, camisetas de algodón, zapatos de montaña, calzado deportivo. Además, no debe dejar de llevar un buen protector solar y un sombrero de ala ancha para el sol.
+									</li>
                                 </ul>
                             </div>
                             <div class="list-title-recomend"><h3>Seguridad</h3></div>
                             <div class="div">
-                                <ul class="unordered-list">
-                                    <li>
-                                        Siempre mantén tus objetos personales bajo tu supervisión y cuidado. Y si tomas un taxi en la calle, siempre verifica que sea un taxi autorizado o pertenezca a alguna empresa de taxis. 
-                                    </li>
-                                    <li>
-                                        Por otro lado, no llevar grandes cantidades de dinero en las excursiones por tener un riesgo de pérdida, sino será bajo su responsabilidad.
-                                    </li>
-                                </ul>
+								<ul class="unordered-list">
+									<li>
+										Siempre mantén tus objetos personales bajo tu supervisión y cuidado. Y si tomas un taxi en la calle, siempre verifica que sea un taxi autorizado o pertenezca a alguna empresa de taxis. 
+									</li>
+									<li>
+										Por otro lado, no llevar grandes cantidades de dinero en las excursiones por tener un riesgo de pérdida, si no será bajo su responsabilidad.
+									</li>
+								</ul>
                             </div>
                             <div class="list-title-recomend"><h3>Salud</h3></div>
                             <div class="div">
-                                <ul class="unordered-list">
-                                    <li>
-                                        Durante tu viaje, hidrátate adecuadamente, sobre todo en zonas de altura. Y recuerda siempre: beber agua embotellada o debidamente tratada, y consumir alimentos en restaurantes y no en puestos ambulantes. 
-                                    </li>
-                                </ul>
+								<ul class="unordered-list">
+									<li>
+										Durante tu viaje, hidrátate adecuadamente, sobre todo en zonas de altura. Y recuerda siempre: beber agua embotellada o debidamente tratada, y consumir alimentos en restaurantes y no en puestos ambulantes. 
+									</li>
+								</ul>
                             </div>
                             <div class="list-title-recomend"><h3>Otras Recomadaciones</h3></div>
                             <div class="div">
-                                <ul class="unordered-list">
-                                    <li>
-                                        La energía eléctrica en el Perú es de 220 voltios y 60 ciclos, en los hoteles de 3 estrellas a más podrán encontrar energía de 110 voltios. Ten cuidado, o infórmate bien, antes de conectar tus equipos a un interruptor.
-                                    </li>
-                                    <li>
-                                        Por último: En el Perú, al dejar una propina, no existe un monto obligatorio, estas dependen de la satisfacción respecto al servicio brindado o de la cortesía del viajero.
-                                    </li>
-                                </ul>
+								<ul class="unordered-list">
+									<li>
+										La energía eléctrica en el Perú es de 220 voltios y 60 ciclos, en los hoteles de 3 estrellas a más podrán encontrar energía de 110 voltios. Ten cuidado, o infórmate bien, antes de conectar tus equipos a un interruptor.
+									</li>
+									<li>
+										Por último: En el Perú, al dejar una propina, no existe un monto obligatorio, estas dependen de la satisfacción respecto al servicio brindado o de la cortesía del viajero.
+									</li>
+								</ul>
                             </div>
                         </div>
                     </div>
@@ -547,6 +547,7 @@
         </div>
     </div>
     <!-- End modal -->
+	
 	<!-- Start Footer -->
 	<footer>
         <div class="container">
@@ -563,7 +564,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-md-3 col-social-list d-flex flex-column align-items-center justify-content-center">
-                    <h3>Encuentranos en</h3>
+                    <h3>Encuéntranos en</h3>
                     <ul class="footer_social list-unstyled">
                         <li class="social_animate"><a class="icon-1" href="https://twitter.com/DestinosQ" target="_blank"><span class="icon-twitter"></span></a></li>
                         <li class="so0cial_animate"><a class="icon-2" href="https://www.facebook.com/DestinosQuillabamba/" target="_blank"><span class="icon-facebook"></span></a></li>
